commit ej 7 - menuContextual corregir

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="cambiar">Cambiar</string>
     <string name="cancelar">Cancelar</string>
     <string name="nuevo_titulo">Nuevo titulo</string>
+    <string name="recargar">Recargar</string>
+    <string name="limpiar">Limpiar</string>
 </resources>
